--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,15 @@ body {
 	color: var(--Very-Dark-Cyan);
 	// color: red;
 }
+button {
+	cursor: pointer;
+	outline: none;
+	border: none;
+	&:hover {
+		filter: brightness(1.7);
+		// opacity: 0.7;
+	}
+}
 .container {
 	padding: 10px;
 	min-width: 350px;
@@ -57,9 +66,14 @@ nav {
 		padding: 5px 20px;
 		border: 1px solid var(--Light-Pink);
 		border-radius: 3rem;
+		cursor: pointer;
+
 		@media screen and (min-width: 600px) {
 			font-size: 1rem;
 			font-weight: bold;
+		}
+		&:hover {
+			box-shadow: 0 0 2px 2px var(--Light-Pink);
 		}
 	}
 }
